# openclaw-video-summary

./: .gitignore  IDENTITY.md  README.en.md  README.md  USER.md  pyproject.toml  summary_prompt.local.md.example
.openclaw/: workspace-state.json
docs/: openclaw-install-for-ai.md  usage.md
docs/plans/: 2026-03-08-openclaw-install-doc-design.md  2026-03-08-openclaw-install-doc-implementation-plan.md  2026-03-08-subtitle-first-design.md
memory/: 2026-02-27-gateway-restart-notify.md  2026-02-27-wake-up.md
openclaw_video_summary/: __init__.py
openclaw_video_summary/asr/: __init__.py  platform_profile.py  transcribe.py
openclaw_video_summary/common/: __init__.py  fileio.py
openclaw_video_summary/ingest/: __init__.py  download.py  source.py
openclaw_video_summary/interfaces/: __init__.py  cli.py  skill_response.py
openclaw_video_summary/pipeline/: __init__.py  auto.py  fast.py  fusion.py  manifest.py  quality.py  task_layout.py
openclaw_video_summary/subtitle/: __init__.py  normalize.py  probe.py
openclaw_video_summary/summary/: __init__.py  client.py  prompts.py  summary_prompt.default.md
openclaw_video_summary/timeline/: __init__.py  build.py
openclaw_video_summary/vision/: __init__.py  analyze.py
skill/: SKILL.md
tests/: __init__.py  test_scaffold.py
tools/bili-analyzer/: README.md  pyproject.toml  smoke_test.sh
tools/bili-analyzer/bili_analyzer/: __init__.py  cli.py  core.py  llm_client.py  mcp_server.py  prompts.py  summarizer.py  timeline.py
tools/bili-analyzer/tests/: test_cli_integration.py  test_summarizer.py  test_timeline.py
(+33 files in other folders)
