[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-video-summary"
version = "0.1.0"
description = "Skill-first video summarization for OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Caihaohan Workspace" }
]

[project.scripts]
openclaw-video-summary = "openclaw_video_summary.interfaces.cli:main"
